# os-mcp

./: AGENTS.md  CHANGELOG.md  Cargo.toml  QUICK_REFERENCE.md  README.md  README_WINDOWS.md  SECURITY_GUIDELINES.md  install.sh  test_sudo.sh  verify_safe_rm.rs
.github/workflows/: release.yml
examples/polkit/: 50-linux-mcp.rules  README_POLKIT.md
src/: audit.rs  config.rs  main.rs  main.rs.backup  windows_elevation.rs
src/prompts/: mod.rs
src/resources/: mod.rs
src/tools/: mod.rs  tests.rs
