[package]
name = "linux-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linux-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.8", features = ["schemars"] }
tokio = { version = "1.42", features = ["full"] }
sysinfo = "0.32"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.30.1", features = ["user"] }
