[package]
name = "windows-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "windows-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.8", features = ["schemars"] }
tokio = { version = "1.42", features = ["full"] }
sysinfo = "0.32"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
] }
